* check for null pointers